--- a/templates/polymer-boilerplate/src/my-element.html
+++ b/templates/polymer-boilerplate/src/my-element.html
@@ -2,10 +2,10 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
 <!-- Define your custom element -->
-<polymer-element name="my-element">
+<polymer-element name="<%= appName %>">
 
     <script>
-        Polymer('my-element', {
+        Polymer('<%= appName %>', {<% if (appLifeCycles == true) { %>
             // Fires when the "<polymer-element>" has been fully prepared
             ready: function() {},
 
@@ -16,7 +16,7 @@
             detached: function() {},
 
             // Fires when an attribute was added, removed, or updated
-            attributeChanged: function(attr, oldVal, newVal) {}
+            attributeChanged: function(attr, oldVal, newVal) {}<% } %>
         });
     </script>
 
