--- a/templates/vanillajs-boilerplate/index.html
+++ b/templates/vanillajs-boilerplate/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>&lt;<%= appName %>&gt;</title>
+    <title>&lt;<%= element %>&gt;</title>
 
     <!-- Importing Web Component's Polyfill -->
     <script src="bower_components/platform/platform.js"></script>
 
     <!-- Importing Custom Elements -->
-    <link rel="import" href="src/<%= appName %>.html">
+    <link rel="import" href="src/<%= element %>.html">
 </head>
 <body>
 
     <!-- Using Custom Elements -->
-    <<%= appName %>></<%= appName %>>
+    <<%= element %>></<%= element %>>
 
 </body>
 </html>
