--- a/templates/x-tag-boilerplate/src/my-element.html
+++ b/templates/x-tag-boilerplate/src/my-element.html
@@ -3,7 +3,7 @@
 
 <script>
 (function() {
-    xtag.register('<%= element %>', {<% if (addLifeCycles == true) { %>
+    xtag.register('<%= elementName %>', {<% if (addLifeCycles == true) { %>
         lifecycle: {
             // Fires when an instance of the element is created
             created: function() {},
