--- a/templates/x-tag-boilerplate/index.html
+++ b/templates/x-tag-boilerplate/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>&lt;<%= elementName %>&gt;</title>
+    <title>&lt;<%= githubRepository %>&gt;</title>
 
     <!-- Importing Web Component's Polyfill -->
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
