--- a/templates/polymer-boilerplate/src/my-element.html
+++ b/templates/polymer-boilerplate/src/my-element.html
@@ -1,29 +1,29 @@
 <!-- Import Polymer -->
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../polymer/polymer.html">
 
-<!-- Define your custom element -->
-<polymer-element name="<%= elementName %>">
+<!-- Define element markup -->
+<dom-module id="<%= elementName %>">
+    <template></template>
+</dom-module>
 
-    <script>
-        Polymer('<%= elementName %>', {<% if (addLifeCycles == true) { %>
-            // Fires when an instance of the element is created
-            created: function() {},
+<!-- Registers custom element -->
+<script>
+Polymer({
+    is: '<%= elementName %>'<% if (addLifeCycles == true) { %>,
 
-            // Fires when the element’s initial set of children and siblings are guaranteed to exist
-            domReady: function() {},
+    // Fires when an instance of the element is created
+    created: function() {},
 
-            // Fires when the "<polymer-element>" has been fully prepared
-            ready: function() {},
+    // Fires when the "<polymer-element>" has been fully prepared
+    ready: function() {},
 
-            // Fires when the element was inserted into the document
-            attached: function() {},
+    // Fires when the element was inserted into the document
+    attached: function() {},
 
-            // Fires when the element was removed from the document
-            detached: function() {},
+    // Fires when the element was removed from the document
+    detached: function() {},
 
-            // Fires when an attribute was added, removed, or updated
-            attributeChanged: function(attr, oldVal, newVal) {}<% } %>
-        });
-    </script>
-
-</polymer-element>
+    // Fires when an attribute was added, removed, or updated
+    attributeChanged: function(attr, oldVal, newVal) {}<% } %>
+});
+</script>
